--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -1,1 +1,70 @@
-<p>homepage works!</p>
+<div (konami)="surprise()"></div>
+<div class="container-fluid mt-3">
+  <div class="row">
+    <div class="col-md-6 offset-md-3 text-center">
+      <img src="assets/daniel_ovieda_headshot.jpg" class="img img-fluid rounded-circle w-25" />
+    </div>
+  </div>
+  <div class="row mt-3">
+    <div class="col-md-6 offset-md-3 text-center">
+      <h2><span class="shadow-sm">Daniel Ovieda</span></h2>
+    </div>
+  </div>
+  <div class="row mt-3">
+    <div class="col-md-6 offset-md-3 text-center">
+      <h4>Software developer from the Bay Area.</h4>
+    </div>
+  </div>
+  <div class="row mt-3">
+    <div class="col-md-6 offset-md-3 text-center">
+      <p>My passion for computers started young.
+        The very first website I coded was a fan site for a popular anime series at the time.
+      I was 13 then and humbly coded in plain HTML.</p>
+    </div>
+  </div>
+
+  <div class="row rounded coffee d-flex justify-content-center">
+    <div class="col-md-2 col-lg-2 d-flex align-items-center justify-content-center">
+      <img src="assets/coffee_cup.png" class="coffeeImg ms-3" />
+    </div>
+    <div class="col-md-auto col-lg-auto text-center d-flex align-items-center text-wrap">
+      <span class="align-middle">Powered by coffee and the pure nerd excitement of solving problems.</span>
+    </div>
+  </div>
+
+  <div class="row mt-3">
+    <div class="col-md-6 offset-md-3 text-center">
+      <p>Despite not being in technical roles over my career, I've always developed practical, scalable solutions to problems.
+        Whether that was writing a VB macro that would run in excel, or a stand alone GUI to automate manager tasks to maximize their productivity.
+        Software is what I love doing.
+      </p>
+    </div>
+  </div>
+
+  <div class="row mt-3">
+    <div class="col-md-6 offset-md-3 text-center">
+      <h3>I'm familiar with</h3>
+    </div>
+  </div>
+
+  <div class="row mt-3">
+    <div class="col-md-6 offset-md-3 text-center">
+      <span class="m-1"><i class="fa-brands fa-html5 fa-2x"></i></span>
+      <span class="m-1"><i class="fa-brands fa-css3 fa-2x"></i></span>
+      <span class="m-1"><i class="fa-brands fa-js fa-2x"></i></span>
+      <span class="m-1"><i class="fa-brands fa-angular fa-2x"></i></span>
+      <span class="m-1"><i class="fa-brands fa-python fa-2x"></i></span>
+      <span class="m-1"><i class="fa-brands fa-aws fa-2x"></i></span>
+      <span class="m-1"><i class="fa-brands fa-node-js fa-2x"></i></span>
+      <span class="m-1"><i class="fa-brands fa-php fa-2x"></i></span>
+      <span class="m-1"><i class="fa-brands fa-wordpress fa-2x"></i></span>
+    </div>
+  </div>
+
+  <div class="row mt-3">
+    <div class="col-md-6 offset-md-3 text-center">
+      <h3>Can also use...</h3>
+    </div>
+  </div>
+
+</div>
