--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -16,7 +16,7 @@
     </div>
   </div>
   <div class="row mt-3">
-    <div class="col-md-6 offset-md-3 text-center">
+    <div class="col-md-6 offset-md-3q">
       <p>My passion for computers started young.
         The very first website I coded was a fan site for a popular anime series at the time.
       I was 13 then and humbly coded in plain HTML.</p>
@@ -33,7 +33,7 @@
   </div>
 
   <div class="row mt-3">
-    <div class="col-md-6 offset-md-3 text-center">
+    <div class="col-md-6 offset-md-3">
       <p>Despite not being in technical roles over my career, I've always developed practical, scalable solutions to problems.
         Whether that was writing a VB macro that would run in excel, or a stand alone GUI to automate manager tasks to maximize their productivity.
         Software is what I love doing.
@@ -63,7 +63,7 @@
 
   <div class="row mt-3">
     <div class="col-md-6 offset-md-3 text-center">
-      <h3>Can also use...</h3>
+      <h3>A few of my projects</h3>
     </div>
   </div>
 
