--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -2,7 +2,10 @@
 <div class="container-fluid mt-3">
   <div class="row">
     <div class="col-md-6 offset-md-3 text-center">
-      <img src="assets/daniel_ovieda_headshot.jpg" class="img img-fluid rounded-circle w-25" />
+      <img
+        src="assets/daniel_ovieda_headshot.jpg"
+        class="img img-fluid rounded-circle w-25"
+      />
     </div>
   </div>
   <div class="row mt-3">
@@ -12,42 +15,50 @@
   </div>
   <div class="row mt-3">
     <div class="col-md-6 offset-md-3 text-center">
-      <h4>Software developer from the Bay Area.</h4>
+      <h4>Software Engineer from the Bay Area.</h4>
     </div>
   </div>
   <div class="row mt-3">
-    <div class="col-md-6 offset-md-3q">
-      <p>My passion for computers started young.
-        The very first website I coded was a fan site for a popular anime series at the time.
-      I was 13 then and humbly coded in plain HTML.</p>
-    </div>
-  </div>
-
-  <div class="row rounded coffee d-flex justify-content-center">
-    <div class="col-md-2 col-lg-2 d-flex align-items-center justify-content-center">
-      <img src="assets/coffee_cup.png" class="coffeeImg ms-3" />
-    </div>
-    <div class="col-md-auto col-lg-auto text-center d-flex align-items-center text-wrap">
-      <span class="align-middle">Powered by coffee and the pure nerd excitement of solving problems.</span>
-    </div>
-  </div>
-
-  <div class="row mt-3">
-    <div class="col-md-6 offset-md-3">
-      <p>Despite not being in technical roles over my career, I've always developed practical, scalable solutions to problems.
-        Whether that was writing a VB macro that would run in excel, or a stand alone GUI to automate manager tasks to maximize their productivity.
-        Software is what I love doing.
+    <div class="col-md-6 offset-md-3 text-center">
+      <p>
+        Dedicated and passionate about creating real-world solutions.
       </p>
     </div>
   </div>
 
   <div class="row mt-3">
+    <div
+      class="col-md-6 offset-md-3 text-center"
+    >
+      <img src="assets/coffee_cup.png" class="coffeeImg ms-3" />
+    </div>
+    <div
+      class="col-md-auto col-lg-auto text-center d-flex align-items-center text-wrap"
+    >
+     
+    </div>
+  </div>
+
+  <div class="row mt-3">
+    <div class="col-md-6 offset-md-3">
+      <p>
+        Thank you for taking the time to visit my page. My name is Daniel and I'm a software engineer.
+        I'm currently looking for a role as a full-stack engineer in the Bay Area or a remote position.
+        I love working as part of a team and have held mostly managerial positions over the span of my career.
+
+      </p>
+    </div>
+  </div>
+
+  
+
+  <div class="row mt-5">
     <div class="col-md-6 offset-md-3 text-center">
       <h3>I'm familiar with</h3>
     </div>
   </div>
 
-  <div class="row mt-3">
+  <div class="row mt-1 mb-4">
     <div class="col-md-6 offset-md-3 text-center">
       <span class="m-1"><i class="fa-brands fa-html5 fa-2x"></i></span>
       <span class="m-1"><i class="fa-brands fa-css3 fa-2x"></i></span>
@@ -58,12 +69,86 @@
       <span class="m-1"><i class="fa-brands fa-node-js fa-2x"></i></span>
       <span class="m-1"><i class="fa-brands fa-php fa-2x"></i></span>
       <span class="m-1"><i class="fa-brands fa-wordpress fa-2x"></i></span>
+
+      <hr />
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-6 offset-md-3 text-center">
+      <h3>Software Projects</h3>
     </div>
   </div>
 
   <div class="row mt-3">
     <div class="col-md-6 offset-md-3 text-center">
-      <h3>A few of my projects</h3>
+      <iframe
+      class="rounded shadow border"
+        width="100%"
+        height="250"
+        src="https://www.youtube.com/embed/qP_VuLYb-mE"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+      ></iframe>
+    </div>
+  </div>
+
+  <div class="row mt-3">
+    <div class="col-md-6 offset-md-3">
+      <h5>contentdrip.io <a href="https://github.com/danielovieda/contentdrip" target="_blank" class="link"><i class="fa-brands fa-github"></i></a></h5>
+      <p class="project">In 2021, I wanted to challenge myself to create something that had a real practical purpose.
+        As a hobby photographer, I know that posting to social media can be painful especially if you're 
+        posting to multiple social platforms at once. This app was designed to make it as easy as possible for 
+        photographers and other content producers to upload a large amount of images, set minimal amounts of captions, 
+        hashtags, and set other parameters in which the backend would run through it creating all of the scheduled posts 
+        and publish them to a third party API.
+      </p>
+      <p class="stack"><b>Stack: </b>Angular/Python/AWS/MongoDB/auth0</p>
+      <hr />
+    </div>
+  </div>
+
+  <div class="row mt-3">
+    <div class="col-md-6 offset-md-3">
+      <img src="assets/comcontrol.png" class="rounded comcontrol shadow border" />
+    </div>
+  </div>
+
+  <div class="row mt-3">
+    <div class="col-md-6 offset-md-3">
+      <h5>Command & Control <a href="https://github.com/danielovieda/comcontrol-wdu-dev" target="_blank" class="link"><i class="fa-brands fa-github"></i></a></h5>
+      <p class="project">
+        Many operations manage things from spreadsheets. We all know the challenges that come with managing via a spreadsheet.
+        Previously, I had developed a dispatch and fleet dashboard on Google sheets with some basic automation. After having gain experience through engineering as a hobby, 
+        I felt it was time to make a scalable application for my company.
+      </p>
+      <p class="project">
+        So, I created a full stack application that allows the organization to maintain status of all vehicles, maintenance notes,
+        employee scheduling and management, vehicle reporting, and so much more. The app is currently being used at one of the highest 
+        performing accounts at the company and has become a critical tool that has boosted productivity and communication.
+        This has been a fantastic project for me because I was able to build something practical and through operational demands and user feedback, 
+        I've been able to make improvements to make the app better and better.
+      </p>
+      <p class="stack"><b>Stack: </b>Angular/Python/AWS/MongoDB/auth0</p>
+      <hr />
+    </div>
+  </div>
+
+  
+
+  <div class="row mt-5">
+    <div class="col-md-6 offset-md-3 text-center">
+      <h3>Education</h3>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-6 offset-md-3">
+      <h6>Bachelor's of Science: Computer Science</h6>
+      <h6>Master of Science: Information Technology</h6>
+      <h6>Master of Business Administration</h6>
     </div>
   </div>
 
