--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -149,6 +149,8 @@
       <h6>Bachelor's of Science: Computer Science</h6>
       <h6>Master of Science: Information Technology</h6>
       <h6>Master of Business Administration</h6>
+      <h6>MIT xPRO Professional Certificate in Coding*</h6>
+      <p class="footnote"><small>* In progress</small></p>
     </div>
   </div>
 
