--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -120,8 +120,8 @@
     <div class="col-md-6 offset-md-3">
       <h5>Command & Control <a href="https://github.com/danielovieda/comcontrol-wdu-dev" target="_blank" class="link"><i class="fa-brands fa-github"></i></a></h5>
       <p class="project">
-        Many operations manage things from spreadsheets. We all know the challenges that come with managing via a spreadsheet.
-        Previously, I had developed a dispatch and fleet dashboard on Google sheets with some basic automation. After having gain experience through engineering as a hobby, 
+        Many operations manage things from spreadsheets - from small businesses to Fortune 500. We know that managing real-time operations can be very difficult from a spreadsheet!
+        Previously, I had developed a dispatch and fleet dashboard on Google sheets with some basic automation for the company. After having gained experience through engineering as a hobby, 
         I felt it was time to make a scalable application for my company.
       </p>
       <p class="project">
