--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -136,6 +136,55 @@
     </div>
   </div>
 
+  <div class="row mt-3">
+    <div class="col-md-6 offset-md-3">
+      <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="assets/estimator/estimator_1.png" class="d-block w-100 rounded sliderImg" alt="...">
+
+          </div>
+          <div class="carousel-item">
+            <img src="assets/estimator/estimator_2.png" class="d-block w-100 rounded sliderImg" alt="...">
+
+          </div>
+          <div class="carousel-item">
+            <img src="assets/estimator/estimator_3.png" class="d-block w-100 rounded sliderImg" alt="...">
+
+          </div>
+          <div class="carousel-item">
+            <img src="assets/estimator/estimator_4.png" class="d-block w-100 rounded sliderImg" alt="...">
+
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </div>
+  </div>
+
+  <div class="row mt-3">
+    <div class="col-md-6 offset-md-3">
+      <h5>Fence Estimator</h5>
+      <p class="project">
+        I recently went through the process of having a new fence constructed in my yard. I put this little project together based off of my experience there.
+      </p>
+      <p class="stack"><b>Stack: </b>Angular Only</p>
+      <hr />
+    </div>
+  </div>
+
   
 
   <div class="row mt-5">
