--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -16,6 +16,8 @@
   <div class="row mt-3">
     <div class="col-md-6 offset-md-3 text-center">
       <h4>Software Engineer from the Bay Area.</h4>
+      <a href="https://github.com/danielovieda/" target="_blank" class="link" title="Daniel Ovieda github"><i class="fa-brands fa-github fa-lg"></i></a>
+      <a href="https://linkedin.com/in/danielovieda/" target="_blank" class="link ms-2" title="Daniel Ovieda LinkedIn"><i class="fa-brands fa-linkedin fa-lg"></i></a>
     </div>
   </div>
   <div class="row mt-3">
@@ -26,31 +28,19 @@
     </div>
   </div>
 
-  <div class="row mt-3">
-    <div
-      class="col-md-6 offset-md-3 text-center"
-    >
-      <img src="assets/coffee_cup.png" class="coffeeImg ms-3" />
-    </div>
-    <div
-      class="col-md-auto col-lg-auto text-center d-flex align-items-center text-wrap"
-    >
-     
-    </div>
-  </div>
 
   <div class="row mt-3">
     <div class="col-md-6 offset-md-3">
       <p>
         Thank you for taking the time to visit my page. My name is Daniel and I'm a software engineer.
         I'm currently looking for a role as a full-stack engineer in the Bay Area or a remote position.
-        I love working as part of a team and have held mostly managerial positions over the span of my career.
+        I love working as part of a team and have held mostly managerial positions over the span of my career. The best way to contact me is via LinkedIn.
 
       </p>
     </div>
   </div>
 
-  
+
 
   <div class="row mt-5">
     <div class="col-md-6 offset-md-3 text-center">
@@ -74,118 +64,9 @@
     </div>
   </div>
 
-  <div class="row">
-    <div class="col-md-6 offset-md-3 text-center">
-      <h3>Software Projects</h3>
-    </div>
-  </div>
 
-  <div class="row mt-3">
-    <div class="col-md-6 offset-md-3 text-center">
-      <iframe
-      class="rounded shadow border"
-        width="100%"
-        height="250"
-        src="https://www.youtube.com/embed/qP_VuLYb-mE"
-        title="YouTube video player"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen
-      ></iframe>
-    </div>
-  </div>
 
-  <div class="row mt-3">
-    <div class="col-md-6 offset-md-3">
-      <h5>contentdrip.io <a href="https://github.com/danielovieda/contentdrip" target="_blank" class="link"><i class="fa-brands fa-github"></i></a></h5>
-      <p class="project">In 2021, I wanted to challenge myself to create something that had a real practical purpose.
-        As a hobby photographer, I know that posting to social media can be painful especially if you're 
-        posting to multiple social platforms at once. This app was designed to make it as easy as possible for 
-        photographers and other content producers to upload a large amount of images, set minimal amounts of captions, 
-        hashtags, and set other parameters in which the backend would run through it creating all of the scheduled posts 
-        and publish them to a third party API.
-      </p>
-      <p class="stack"><b>Stack: </b>Angular/Python/AWS/MongoDB/auth0</p>
-      <hr />
-    </div>
-  </div>
 
-  <div class="row mt-3">
-    <div class="col-md-6 offset-md-3">
-      <img src="assets/comcontrol.png" class="rounded comcontrol shadow border" />
-    </div>
-  </div>
-
-  <div class="row mt-3">
-    <div class="col-md-6 offset-md-3">
-      <h5>Command & Control <a href="https://github.com/danielovieda/comcontrol-wdu-dev" target="_blank" class="link"><i class="fa-brands fa-github"></i></a></h5>
-      <p class="project">
-        Many operations manage things from spreadsheets - from small businesses to Fortune 500. We know that managing real-time operations can be very difficult from a spreadsheet!
-        Previously, I had developed a dispatch and fleet dashboard on Google sheets with some basic automation for the company. After having gained experience through engineering as a hobby, 
-        I felt it was time to make a scalable application for my company.
-      </p>
-      <p class="project">
-        So, I created a full stack application that allows the organization to maintain status of all vehicles, maintenance notes,
-        employee scheduling and management, vehicle reporting, and so much more. The app is currently being used at one of the highest 
-        performing accounts at the company and has become a critical tool that has boosted productivity and communication.
-        This has been a fantastic project for me because I was able to build something practical and through operational demands and user feedback, 
-        I've been able to make improvements to make the app better and better.
-      </p>
-      <p class="stack"><b>Stack: </b>Angular/Python/AWS/MongoDB/auth0</p>
-      <hr />
-    </div>
-  </div>
-
-  <div class="row mt-3">
-    <div class="col-md-6 offset-md-3">
-      <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="assets/estimator/estimator_1.png" class="d-block w-100 rounded sliderImg" alt="...">
-
-          </div>
-          <div class="carousel-item">
-            <img src="assets/estimator/estimator_2.png" class="d-block w-100 rounded sliderImg" alt="...">
-
-          </div>
-          <div class="carousel-item">
-            <img src="assets/estimator/estimator_3.png" class="d-block w-100 rounded sliderImg" alt="...">
-
-          </div>
-          <div class="carousel-item">
-            <img src="assets/estimator/estimator_4.png" class="d-block w-100 rounded sliderImg" alt="...">
-
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
-    </div>
-  </div>
-
-  <div class="row mt-3">
-    <div class="col-md-6 offset-md-3">
-      <h5>Fence Estimator</h5>
-      <p class="project">
-        I recently went through the process of having a new fence constructed in my yard. I put this little project together based off of my experience there.
-      </p>
-      <p class="stack"><b>Stack: </b>Angular Only</p>
-      <hr />
-    </div>
-  </div>
-
-  
 
   <div class="row mt-5">
     <div class="col-md-6 offset-md-3 text-center">
@@ -198,8 +79,7 @@
       <h6>Bachelor's of Science: Computer Science</h6>
       <h6>Master of Science: Information Technology</h6>
       <h6>Master of Business Administration</h6>
-      <h6>MIT xPRO Professional Certificate in Coding*</h6>
-      <p class="footnote"><small>* In progress</small></p>
+      <h6>MIT xPRO Professional Certificate in Coding</h6>
     </div>
   </div>
 
